bench/tests/query_results/snapshots/r#mod__query_results__windfarm__Grouped Production Q1.snap
---
source: bench/tests/query_results/windfarm.rs
expression: "run_select_query(&store,\ninclude_str!(\"./queries/wind-farm-grouped-production-query1.sparql\")).await"
---
{
  "head": {
    "vars": [
      "site_label",
      "wtur_label",
      "year",
      "month",
      "day",
      "hour",
      "minute_10",
      "avg_val"
    ]
  },
  "results": {
    "bindings": [
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3499912.813853577"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "40"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3499798.2391964"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "50"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3502901.082956885"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "0"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3501785.062614679"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "10"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3497708.4036088386"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "20"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3493541.2909297943"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "30"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3489056.835288615"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "40"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3492682.680845432"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "9"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "50"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3503934.5632003304"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "10"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "0"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      },
      {
        "avg_val": {
          "datatype": "http://www.w3.org/2001/XMLSchema#double",
          "type": "literal",
          "value": "3515600.112750975"
        },
        "day": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "30"
        },
        "hour": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "10"
        },
        "minute_10": {
          "datatype": "http://www.w3.org/2001/XMLSchema#decimal",
          "type": "literal",
          "value": "10"
        },
        "month": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "8"
        },
        "site_label": {
          "type": "literal",
          "value": "Wind Mountain"
        },
        "wtur_label": {
          "type": "literal",
          "value": "A1"
        },
        "year": {
          "datatype": "http://www.w3.org/2001/XMLSchema#integer",
          "type": "literal",
          "value": "2022"
        }
      }
    ]
  }
}
